--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@
       font-size: 60px;
 
 }
-header:after {
+.header:after {
   content: "";
   position: absolute;
   display: block;
@@ -43,7 +43,6 @@ header:after {
 .wrapper{
   display: flex;
   justify-content: center;
-  text-align: center;
   padding-top: 20px;
 }
 
@@ -62,4 +61,12 @@ h1{
 
 blockquote{
   border-left: 1px solid gray;
+}
+
+li{
+  list-style-type: none;
+}
+
+image{
+  width: 100px;
 }
